# zaf-ws/src/main/resources/openapi/zaf-api.yaml
@@ -9,7 +9,7 @@ info:
 tags:
   - name: Validation
 paths:
-  /documents/result/{validationRequestId}:
+  /validation/result/{validationRequestId}:
     get:
       operationId: Validations_result
       description: Získání výsledku validačního požadavku
@@ -19,6 +19,11 @@ paths:
           required: true
           schema:
             $ref: '#/components/schemas/ValidationRequestId'
+        - name: Accept
+          in: header
+          required: true
+          schema:
+            type: string
         - name: X-Correlation-Id
           in: header
           required: false
@@ -31,6 +36,9 @@ paths:
             application/xml:
               schema:
                 $ref: '#/components/schemas/ValidationXmlResult'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationJsonResult'
         '401':
           description: User is not authorized
           headers:
@@ -69,7 +77,7 @@ paths:
                 $ref: '#/components/schemas/NotFound'
       tags:
         - Validation
-  /documents/status/{validationRequestId}:
+  /validation/status/{validationRequestId}:
     get:
       operationId: Validations_status
       description: Zjištění stavu validačního požadavku
@@ -110,7 +118,7 @@ paths:
                 $ref: '#/components/schemas/NotFound'
       tags:
         - Validation
-  /documents/validate:
+  /validation/validate:
     post:
       operationId: Validations_validate
       description: Vložení validačního požadavku
@@ -161,9 +169,16 @@ paths:
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
               $ref: '#/components/schemas/ValidationRequest'
+            encoding:
+              batchMode:
+                contentType: text/plain
+              validationType:
+                contentType: application/json
+              data:
+                contentType: '*/*'
 components:
   schemas:
     DataPackageValidationResult:
@@ -225,7 +240,8 @@ components:
         - type
       properties:
         type:
-          type: string
+          allOf:
+            - $ref: '#/components/schemas/RelatedEntityType'
           description: Typ entity
         id:
           type: string
@@ -234,6 +250,21 @@ components:
           type: string
           description: Popis entity
       description: Související entita
+    RelatedEntityType:
+      type: string
+      enum:
+        - ARCHIVNI_SOUBOR
+        - CAST_JEDNOTLIVOSTI
+        - DIL
+        - DOKUMENT
+        - JEDNOTLIVOST
+        - SERIE
+        - SLOZKA
+        - SOUCAST
+        - SPIS
+        - SPISOVY_PLAN
+        - VECNA_SKUPINA
+      description: Typ entity
     RequestProcessState:
       type: string
       enum:
@@ -325,8 +356,6 @@ components:
       description: Výsledek validace úrovně kontrol
     ValidationRequest:
       type: object
-      required:
-        - data
       properties:
         batchMode:
           type: boolean
@@ -342,9 +371,10 @@ components:
           description: Identifikátor požadavku
         data:
           type: string
-          format: byte
+          format: binary
           description: Binární data
-      description: Požadavek na validaci
+      required:
+        - data
     ValidationRequestId:
       type: string
       description: Identifikátor validačního požadavku
